--- a/YourCityEvents/View/InputView/InputView.xib
+++ b/YourCityEvents/View/InputView/InputView.xib
@@ -27,30 +27,30 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="eNM-CC-f70">
-            <rect key="frame" x="0.0" y="0.0" width="510" height="114"/>
+            <rect key="frame" x="0.0" y="0.0" width="497" height="114"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fif-o7-1te">
-                    <rect key="frame" x="0.0" y="0.0" width="510" height="114"/>
+                    <rect key="frame" x="0.0" y="0.0" width="497" height="114"/>
                     <subviews>
-                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Неверный пароль" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ylL-nI-iz6">
-                            <rect key="frame" x="15" y="100" width="480" height="14"/>
+                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Неверный пароль" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ylL-nI-iz6">
+                            <rect key="frame" x="15" y="97.5" width="467" height="16.5"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="12"/>
-                            <color key="textColor" name="EF1010_RedRibbon"/>
+                            <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
+                            <color key="textColor" red="0.96364933249999996" green="0.45617842669999997" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cnh-3e-vW2">
-                            <rect key="frame" x="0.0" y="0.0" width="510" height="98"/>
+                            <rect key="frame" x="0.0" y="0.0" width="497" height="98"/>
                             <subviews>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0aw-h5-07V">
-                                    <rect key="frame" x="20" y="39.5" width="436" height="19"/>
-                                    <color key="textColor" name="2D2D2D_Mine Shaft"/>
-                                    <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
+                                    <rect key="frame" x="20" y="39" width="423" height="20"/>
+                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                                     <textInputTraits key="textInputTraits"/>
                                 </textField>
                                 <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0.2Eye" translatesAutoresizingMaskIntoConstraints="NO" id="Khq-Yi-Xn5">
-                                    <rect key="frame" x="466" y="37" width="24" height="24"/>
+                                    <rect key="frame" x="453" y="37" width="24" height="24"/>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F23-i7-ir0">
                                     <rect key="frame" x="15" y="49" width="0.0" height="0.0"/>
@@ -117,21 +117,15 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="Vau-Oh-LY6"/>
-            <point key="canvasLocation" x="207.24637681159422" y="-174.10714285714286"/>
+            <point key="canvasLocation" x="197.82608695652175" y="-174.10714285714286"/>
         </view>
     </objects>
     <resources>
         <image name="0.2Eye" width="24" height="24"/>
-        <namedColor name="2D2D2D_Mine Shaft">
-            <color red="0.32899999618530273" green="0.32400000095367432" blue="0.4779999852180481" alpha="0.33000001311302185" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="333333_MineShaft">
             <color red="0.32899999618530273" green="0.32400000095367432" blue="0.4779999852180481" alpha="0.33000001311302185" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="DFDFDF_Alto">
-            <color red="0.32899999618530273" green="0.32400000095367432" blue="0.4779999852180481" alpha="0.33000001311302185" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="EF1010_RedRibbon">
             <color red="0.32899999618530273" green="0.32400000095367432" blue="0.4779999852180481" alpha="0.33000001311302185" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
