--- a/YourCityEvents/Modules/Profile/View/ProfileVC.xib
+++ b/YourCityEvents/Modules/Profile/View/ProfileVC.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_5" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
@@ -17,18 +17,18 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="l9X-hb-2Ub">
-                    <rect key="frame" x="0.0" y="250" width="414" height="612"/>
+                    <rect key="frame" x="0.0" y="110" width="375" height="557"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5UE-bi-1Lt">
-                    <rect key="frame" x="0.0" y="44" width="414" height="110"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="110"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eDT-eI-9lM">
-                            <rect key="frame" x="20" y="109" width="374" height="1"/>
+                            <rect key="frame" x="20" y="109" width="335" height="1"/>
                             <color key="backgroundColor" name="Grey"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="Gmm-ZR-hAA"/>
@@ -42,23 +42,23 @@
                             </constraints>
                         </imageView>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow" translatesAutoresizingMaskIntoConstraints="NO" id="MLu-uQ-DwD">
-                            <rect key="frame" x="385" y="49.666666666666671" width="9" height="21"/>
+                            <rect key="frame" x="346" y="49.5" width="9" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="9" id="gdd-OH-Tmh"/>
                                 <constraint firstAttribute="height" constant="21" id="zjj-Qw-4qV"/>
                             </constraints>
                         </imageView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="wfe-ft-Gny">
-                            <rect key="frame" x="111" y="35.666666666666671" width="266" height="48.666666666666671"/>
+                            <rect key="frame" x="111" y="35.5" width="227" height="49"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vLc-uC-hDV">
-                                    <rect key="frame" x="0.0" y="0.0" width="266" height="20.333333333333332"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="227" height="20.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rCg-eb-ek0">
-                                    <rect key="frame" x="0.0" y="28.333333333333329" width="266" height="20.333333333333329"/>
+                                    <rect key="frame" x="0.0" y="28.5" width="227" height="20.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <color key="textColor" name="Grey"/>
                                     <nil key="highlightedColor"/>
@@ -81,19 +81,8 @@
                         <constraint firstItem="wfe-ft-Gny" firstAttribute="leading" secondItem="iU3-7q-kAW" secondAttribute="trailing" constant="21" id="tWH-rt-RCi"/>
                     </constraints>
                 </view>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="osc-SP-x3t">
-                    <rect key="frame" x="20" y="162" width="374" height="80"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="80" id="bxT-RY-2WV"/>
-                    </constraints>
-                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                    <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                </textView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ljm-Ow-Dni">
-                    <rect key="frame" x="0.0" y="44" width="414" height="110"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="110"/>
                     <connections>
                         <action selector="editAction" destination="-1" eventType="touchUpInside" id="0eE-0W-RPI"/>
                     </connections>
@@ -102,17 +91,14 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="Ljm-Ow-Dni" firstAttribute="width" secondItem="5UE-bi-1Lt" secondAttribute="width" id="37e-WK-iXf"/>
-                <constraint firstItem="osc-SP-x3t" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="AQS-nq-g2w"/>
-                <constraint firstItem="l9X-hb-2Ub" firstAttribute="top" secondItem="osc-SP-x3t" secondAttribute="bottom" constant="8" id="DgK-MX-DNB"/>
                 <constraint firstItem="l9X-hb-2Ub" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="FxN-JY-4hB"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="5UE-bi-1Lt" secondAttribute="trailing" id="IhX-Sw-4Yj"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="l9X-hb-2Ub" secondAttribute="trailing" id="OIF-Yo-gTt"/>
                 <constraint firstItem="5UE-bi-1Lt" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="TUZ-eT-cu8"/>
+                <constraint firstItem="l9X-hb-2Ub" firstAttribute="top" secondItem="5UE-bi-1Lt" secondAttribute="bottom" id="Tkk-Gq-Shb"/>
                 <constraint firstItem="Ljm-Ow-Dni" firstAttribute="centerX" secondItem="5UE-bi-1Lt" secondAttribute="centerX" id="dID-IQ-3au"/>
-                <constraint firstItem="osc-SP-x3t" firstAttribute="top" secondItem="5UE-bi-1Lt" secondAttribute="bottom" constant="8" id="mEZ-v5-v9t"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="l9X-hb-2Ub" secondAttribute="bottom" id="ng2-5n-ZEh"/>
                 <constraint firstItem="5UE-bi-1Lt" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="rTK-rJ-vPw"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="osc-SP-x3t" secondAttribute="trailing" constant="20" id="x5L-bo-gkT"/>
                 <constraint firstItem="Ljm-Ow-Dni" firstAttribute="height" secondItem="5UE-bi-1Lt" secondAttribute="height" id="ycC-jE-CM7"/>
                 <constraint firstItem="Ljm-Ow-Dni" firstAttribute="centerY" secondItem="5UE-bi-1Lt" secondAttribute="centerY" id="yuu-tR-k4g"/>
             </constraints>
