--- a/YourCityEvents/Modules/Profile/View/ProfileVC.xib
+++ b/YourCityEvents/Modules/Profile/View/ProfileVC.xib
@@ -14,6 +14,7 @@
                 <outlet property="cityLabel" destination="rCg-eb-ek0" id="Fip-Ds-Ch8"/>
                 <outlet property="fullNameLabel" destination="vLc-uC-hDV" id="NgA-ej-wnf"/>
                 <outlet property="headerView" destination="5UE-bi-1Lt" id="ma4-yR-IqH"/>
+                <outlet property="profileImageView" destination="iU3-7q-kAW" id="IId-zH-DTX"/>
                 <outlet property="tableView" destination="l9X-hb-2Ub" id="cDf-Wv-N3y"/>
                 <outlet property="view" destination="iN0-l3-epB" id="O8N-Ji-0Np"/>
             </connections>
@@ -38,10 +39,10 @@
                             </constraints>
                         </view>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile-1" translatesAutoresizingMaskIntoConstraints="NO" id="iU3-7q-kAW">
-                            <rect key="frame" x="30" y="30" width="60" height="60"/>
+                            <rect key="frame" x="20" y="20" width="80" height="80"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="60" id="4wg-UR-25W"/>
-                                <constraint firstAttribute="height" constant="60" id="hqZ-5l-LPa"/>
+                                <constraint firstAttribute="width" constant="80" id="4wg-UR-25W"/>
+                                <constraint firstAttribute="height" constant="80" id="hqZ-5l-LPa"/>
                             </constraints>
                         </imageView>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow" translatesAutoresizingMaskIntoConstraints="NO" id="MLu-uQ-DwD">
@@ -52,16 +53,16 @@
                             </constraints>
                         </imageView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="wfe-ft-Gny">
-                            <rect key="frame" x="111" y="35.5" width="227" height="49"/>
+                            <rect key="frame" x="121" y="35.5" width="217" height="49"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vLc-uC-hDV">
-                                    <rect key="frame" x="0.0" y="0.0" width="227" height="20.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="217" height="20.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rCg-eb-ek0">
-                                    <rect key="frame" x="0.0" y="28.5" width="227" height="20.5"/>
+                                    <rect key="frame" x="0.0" y="28.5" width="217" height="20.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <color key="textColor" name="Grey"/>
                                     <nil key="highlightedColor"/>
@@ -74,10 +75,10 @@
                         <constraint firstItem="MLu-uQ-DwD" firstAttribute="centerY" secondItem="iU3-7q-kAW" secondAttribute="centerY" id="3VU-pZ-Zx5"/>
                         <constraint firstAttribute="bottom" secondItem="eDT-eI-9lM" secondAttribute="bottom" id="9ND-Ep-dOc"/>
                         <constraint firstAttribute="trailing" secondItem="MLu-uQ-DwD" secondAttribute="trailing" constant="20" id="SFQ-tK-7xD"/>
-                        <constraint firstItem="iU3-7q-kAW" firstAttribute="leading" secondItem="5UE-bi-1Lt" secondAttribute="leading" constant="30" id="csc-Fo-JfL"/>
+                        <constraint firstItem="iU3-7q-kAW" firstAttribute="leading" secondItem="5UE-bi-1Lt" secondAttribute="leading" constant="20" id="csc-Fo-JfL"/>
                         <constraint firstItem="wfe-ft-Gny" firstAttribute="centerY" secondItem="iU3-7q-kAW" secondAttribute="centerY" id="des-Va-5PF"/>
                         <constraint firstAttribute="height" constant="110" id="frP-bz-xjb"/>
-                        <constraint firstItem="iU3-7q-kAW" firstAttribute="top" secondItem="5UE-bi-1Lt" secondAttribute="top" constant="30" id="grJ-bC-5Dk"/>
+                        <constraint firstItem="iU3-7q-kAW" firstAttribute="top" secondItem="5UE-bi-1Lt" secondAttribute="top" constant="20" id="grJ-bC-5Dk"/>
                         <constraint firstItem="MLu-uQ-DwD" firstAttribute="leading" secondItem="wfe-ft-Gny" secondAttribute="trailing" constant="8" id="jSs-Fk-Yuu"/>
                         <constraint firstItem="eDT-eI-9lM" firstAttribute="leading" secondItem="5UE-bi-1Lt" secondAttribute="leading" constant="20" id="nUO-JY-A0I"/>
                         <constraint firstAttribute="trailing" secondItem="eDT-eI-9lM" secondAttribute="trailing" constant="20" id="tNY-iN-Tmp"/>
